# i2cdev-sensors

./: .gitignore  README.md
i2cdev-adxl345/: Cargo.toml  README.md
i2cdev-adxl345/src/: lib.rs
i2cdev-bmp180/: Cargo.toml  README.md
i2cdev-bmp180/src/: lib.rs
i2cdev-bmp280/: Cargo.toml  README.md
i2cdev-bmp280/src/: lib.rs  main.rs
i2cdev-l3gd20/: Cargo.toml  README.md
i2cdev-l3gd20/examples/: l3gd20h.rs
i2cdev-l3gd20/src/: lib.rs  main.rs
i2cdev-lsm303D/: Cargo.toml
i2cdev-lsm303D/src/: lib.rs
i2cdev-lsm303d/: Cargo.toml  README.md
i2cdev-lsm303d/src/: lib.rs  main.rs
i2cdev-lsm303dlhc/: Cargo.toml  README.md
i2cdev-lsm303dlhc/src/: lib.rs  main.rs
i2cdev-lsm9ds0/: Cargo.toml  README.md
i2cdev-lsm9ds0/src/: lib.rs  main.rs
i2cdev-mpl115a2/: Cargo.toml  README.md
i2cdev-mpl115a2/src/: lib.rs
i2cdev-nunchuck/: Cargo.toml  README.md
i2cdev-nunchuck/src/: lib.rs
i2csensors/: Cargo.toml
i2csensors/src/: lib.rs
