[package]
name = "i2cdev-bmp280"
version = "0.1.0"
authors = ["martindeegan <mddeegan@gmail.com>"]
description = "BMP280 barometer, thermometer I2C driver."
license = "MIT/Apache-2.0"

[lib]
name = "i2cdev_bmp280"
path =  "src/lib.rs"

[[bin]]
name = "bmp280_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.1"
byteorder = "1"
i2csensors = "0.1.0"