[package]
name = "i2cdev-bmp280"
version = "0.1.4"
authors = ["martindeegan <mddeegan@gmail.com>"]
repository = "https://github.com/martindeegan/i2cdev-sensors"
description = "I2C driver for the BMP280 barometer, thermometer."
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "i2cdev_bmp280"
path =  "src/lib.rs"

[[bin]]
name = "bmp280_bin"
path = "src/main.rs"

[dependencies]
i2cdev =  { path = "../../rust-i2cdev", version = "0.3.1" }
byteorder = "1"
i2csensors = "0.1.*"
