[package]
name = "i2cdev-l3gd20"
version = "0.1.2"
authors = ["martindeegan <mddeegan@gmail.com>"]
repository = "https://github.com/martindeegan/i2cdev-sensors"
description = "I2C driver for the L3GD20 gyroscope."
readme = "README.md"
license = "MIT/Apache-2.0"

[lib]
name = "i2cdev_l3gd20"
path =  "src/lib.rs"

[[bin]]
name = "l3gd20_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.1"
byteorder = "1"
i2csensors = "0.1.*"
