[package]
name = "i2cdev-lsm303d"
version = "0.1.0"
authors = ["martindeegan <mddeegan@gmail.com>"]
description = "LSM303D accelerometer, magnetometer I2C driver"
license = "MIT/Apache-2.0"

[lib]
name = "i2cdev_lsm303d"
path =  "src/lib.rs"

[[bin]]
name = "lsm303d_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.1"
byteorder = "1"
i2csensors = "0.1.0"