[package]
name = "i2cdev-lsm303dlhc"
version = "1.0.0"
authors = ["martindeegan <mddeegan@gmail.com>", "Thomas Deegan <tadeegan@gmail.com>"]
description = "LSM303DLHC accelerometer, magnetometer I2C driver"
license = "MIT/Apache-2.0"

[lib]
name = "i2cdev_lsm303dlhc"
path =  "src/lib.rs"

[[bin]]
name = "lsm303dlhc_bin"
path = "src/main.rs"

[dependencies]
i2cdev = "0.3.1"
byteorder = "1"
i2csensors = "0.1.*"
